force-app/main/default/objects/Account/fields/all__c.field-meta.xml
<CustomField>
    <fullName>all__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>all</label>
    <referenceTo>all__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>