force-app/main/default/objects/Account/fields/Code_Client__c.field-meta.xml
<CustomField>
    <fullName>Code_Client__c</fullName>
    <displayFormat>CL {00000000}</displayFormat>
    <label>Code Client</label>
    <type>AutoNumber</type>
</CustomField>