force-app/main/default/objects/Account/fields/Concatenation__c.field-meta.xml
<CustomField>
    <fullName>Concatenation__c</fullName>
    <label>Concatenation</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>