force-app/main/default/objects/Account/fields/ConferencePlus_Test__c.field-meta.xml
<CustomField>
    <fullName>ConferencePlus_Test__c</fullName>
    <description>//HKA 13/003/2012
Test migration of Multipicklist</description>
    <label>ConferencePlus Test</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>MultiPickList</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>