force-app/main/default/objects/Account/fields/Count_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Count_Opportunities__c</fullName>
    <description>Count the number of opportunities</description>
    <label>Count Opportunities</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won, Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>