force-app/main/default/objects/Account/fields/Deployement__c.field-meta.xml
<CustomField>
    <fullName>Deployement__c</fullName>
    <description>//HKA 12/04/12 test deployement of Pickilist to another environment
to remove after.</description>
    <label>Deployement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Deployement</fullName>
            </value>
            <value>
                <fullName>picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>