force-app/main/default/objects/Account/fields/Formula_exam1_del__c.field-meta.xml
<CustomField>
    <fullName>Formula_exam1_del__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula exam1</label>
    <type>Text</type>
</CustomField>