force-app/main/default/objects/Account/fields/Formula_exam__c.field-meta.xml
<CustomField>
    <fullName>Formula_exam__c</fullName>
    <formula>$Profile.Name  &amp;  BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula exam</label>
    <type>Text</type>
</CustomField>