force-app/main/default/objects/Account/fields/HKA_Image_Test__c.field-meta.xml
<CustomField>
    <fullName>HKA_Image_Test__c</fullName>
    <description>HKA 24/03/2012
Test of upload image</description>
    <label>HKA-Image-Test</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>