force-app/main/default/objects/Account/fields/Numero__c.field-meta.xml
<CustomField>
    <fullName>Numero__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Numero</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>