force-app/main/default/objects/Account/fields/Partner_Logo__c.field-meta.xml
<CustomField>
    <fullName>Partner_Logo__c</fullName>
    <formula>IMAGE(  
CASE( Partner_Type__c  ,  
&quot;Platinuim&quot;, &quot;/img/samples/stars_200.gif&quot;, 
&quot;Silver&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;Golden&quot;, &quot;/img/samples/stars_500.gif&quot;,  
&quot;/img/samples/stars_000.gif&quot;)  
,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Logo</label>
    <type>Text</type>
</CustomField>