force-app/main/default/objects/Account/fields/Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Type__c</fullName>
    <description>Partner Type</description>
    <label>Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>AccountSource</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Platinuim</fullName>
            </value>
            <value>
                <fullName>Golden</fullName>
                <default>true</default>
                <label>Golden</label>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>