force-app/main/default/objects/Account/fields/Pass__c.field-meta.xml
<CustomField>
    <fullName>Pass__c</fullName>
    <label>Password</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>