force-app/main/default/objects/Account/fields/Piclist_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Piclist_Deploy__c</fullName>
    <description>//HKA 12/04/2012 test deploy Picklist
To remove After</description>
    <label>Piclist Deploy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>deploy</fullName>
            </value>
            <value>
                <fullName>to</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>