force-app/main/default/objects/Account/fields/Skype4SF__skype_name__c.field-meta.xml
<CustomField>
    <fullName>Skype4SF__skype_name__c</fullName>
    <label>Skype name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>