force-app/main/default/objects/Account/fields/Sum_Amount_Opprtunities__c.field-meta.xml
<CustomField>
    <fullName>Sum_Amount_Opprtunities__c</fullName>
    <description>sum amount of all amount of opprtunities</description>
    <label>Sum Amount Opprtunities</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>