force-app/main/default/objects/Account/fields/Test_dependency__c.field-meta.xml
<CustomField>
    <fullName>Test_dependency__c</fullName>
    <label>Test dependency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test A</fullName>
            </value>
            <value>
                <fullName>Test B</fullName>
            </value>
            <value>
                <fullName>Test C</fullName>
            </value>
            <value>
                <fullName>Test D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>