force-app/main/default/objects/Account/fields/Test_external_id__c.field-meta.xml
<CustomField>
    <fullName>Test_external_id__c</fullName>
    <externalId>true</externalId>
    <label>Test  external id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>