force-app/main/default/objects/Account/fields/Test_Image__c.field-meta.xml
<CustomField>
    <fullName>Test_Image__c</fullName>
    <formula>IMAGE( &quot;/img/samples/light_green.gif&quot;, &quot;blue&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer</label>
    <type>Text</type>
</CustomField>