force-app/main/default/objects/Account/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <description>//HKA 13/04/2012</description>
    <label>User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>