force-app/main/default/objects/Account/recordTypes/Tes.recordType-meta.xml
<RecordType>
    <fullName>Tes</fullName>
    <active>true</active>
    <label>Tes</label>
</RecordType>