force-app/main/default/objects/Account/validationRules/Account_number_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_number_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>LEN (AccountNumber )=0</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>mandatory</errorMessage>
</ValidationRule>