force-app/main/default/objects/Account/validationRules/Account_number_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_number_obligatoire</fullName>
    <active>false</active>
    <errorConditionFormula>IF( LEN( AccountNumber ) &lt;=0, true, false)</errorConditionFormula>
    <errorMessage>le account number ne doit pas etre null</errorMessage>
</ValidationRule>