force-app/main/default/objects/Account/validationRules/alll.validationRule-meta.xml
<ValidationRule>
    <fullName>alll</fullName>
    <active>false</active>
    <errorConditionFormula>REGEX( AccountNumber , &quot;11&quot;)</errorConditionFormula>
    <errorDisplayField>AccountNumber</errorDisplayField>
    <errorMessage>REGEX( AccountNumber , &quot;213-[0-9]{8}&quot;)</errorMessage>
</ValidationRule>